# dl4cv-oda

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yaml
data/: kolovai-trees-cleaned.geojson  tiles.geojson
data/chips/: OAM-6773-293571-19.tif  OAM-6773-293571-19.tif.aux.xml  OAM-6773-293572-19.tif  OAM-6773-293572-19.tif.aux.xml  OAM-6773-293573-19.tif  OAM-6773-293573-19.tif.aux.xml  OAM-6773-293574-19.tif  OAM-6773-293574-19.tif.aux.xml  OAM-6773-293575-19.tif  OAM-6773-293575-19.tif.aux.xml  OAM-6773-293576-19.tif  OAM-6773-293576-19.tif.aux.xml  OAM-6773-293577-19.tif  OAM-6773-293577-19.tif.aux.xml  OAM-6773-293578-19.tif  OAM-6773-293578-19.tif.aux.xml  OAM-6773-293579-19.tif  OAM-6773-293579-19.tif.aux.xml  OAM-6773-293580-19.tif  OAM-6773-293580-19.tif.aux.xml  OAM-6773-293581-19.tif  OAM-6773-293581-19.tif.aux.xml  OAM-6773-293582-19.tif  OAM-6773-293582-19.tif.aux.xml  OAM-6773-293583-19.tif  OAM-6773-293583-19.tif.aux.xml  OAM-6773-293584-19.tif  OAM-6773-293584-19.tif.aux.xml  OAM-6773-293585-19.tif  OAM-6773-293585-19.tif.aux.xml  OAM-6773-293586-19.tif  OAM-6773-293586-19.tif.aux.xml  OAM-6773-293587-19.tif  OAM-6773-293587-19.tif.aux.xml  OAM-6773-293588-19.tif  OAM-6773-293588-19.tif.aux.xml  OAM-6773-293589-19.tif  OAM-6773-293589-19.tif.aux.xml  OAM-6773-293590-19.tif  OAM-6773-293590-19.tif.aux.xml  (+1062 more)
data/raw/: cleaned.geojson
notebooks/: 01_cleanup.ipynb  02_tiles.ipynb  03_yolo_format.ipynb  cleanup.ipynb  cleanup_data.ipynb  experiment.ipynb  tiles.ipynb
notebooks/runs/detect/custom_experiment/: results.csv
