[project]
name = "dl4cv-object-detection-on-aerial-imagery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geomltoolkits>=0.4.2",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "pyyaml>=6.0.3",
    "shapely>=2.1.2",
]
